<resources>
    <string name="app_name">GameTetris</string>
    <string name="selecione_a_dificuldade_de_jogo">Selecione a dificuldade de jogo:</string>
    <string name="Normal">Normal</string>
    <string name="f_cil">Fácil</string>
    <string name="facil">facil</string>
    <string name="Fácil">Fácil</string>
    <string name="Difícil">Difícil</string>
    <string name="confirmar">Confirmar</string>
    <string name="continuar">Continuar</string>
    <string name="novo_jogo">Novo Jogo</string>
    <string name="configuracoes">Configurações</string>
    <string name="sair">Sair</string>
    <string name="pontuacao">Sua pontuação</string>
    <string name="pontosFinais">0</string>
    <string name="recorde">Recorde</string>
    <string name="novo_jogo_tela_pontos">Novo Jogo</string>
    <string name="pontos">Pontos:</string>
    <string name="pontuacaoAtual">0</string>
    <string name="direita"><![CDATA[>>>]]></string>
    <string name="esquerda"><![CDATA[<<<]]></string>
    <string name="moverBaixo">V</string>
    <string name="proxima">Próximas</string>
</resources>
