<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/padrao"
    android:orientation="vertical"
    >
    <ImageView
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:background="@drawable/logo"
        android:layout_gravity="center"
        android:layout_margin="50dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pontuacao"
        android:textSize="40sp"
        android:gravity="center_horizontal"
        android:textColor="@color/branco"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pontosFinais"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        android:textColor="@color/branco"
        android:id="@+id/pontuacaoFinal"
        android:layout_margin="20dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recorde"
        android:textSize="40sp"
        android:gravity="center_horizontal"
        android:textColor="@color/branco"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pontosFinais"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        android:textColor="@color/branco"
        android:id="@+id/melhorRecorde"
        android:layout_margin="20dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/novo_jogo_tela_pontos"
        android:textSize="30sp"
        android:textColor="@color/aviso"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:shadowRadius="100"
        android:shadowColor="@color/aviso"
        android:id="@+id/novo_jogo_pontos"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/sair"
        android:textSize="30sp"
        android:textColor="@color/aviso"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:shadowRadius="100"
        android:shadowColor="@color/aviso"
        android:id="@+id/sair_do_jogo"
        />

</LinearLayout>
</layout>