<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/padrao"
    >

    <ImageView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/logo"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/continuar"
        android:textColor="@color/amarelo"
        android:textStyle="bold"
        android:textSize="30sp"
        android:padding="20dp"
        android:layout_margin="10dp"
        android:shadowRadius="100"
        android:shadowColor="@color/aviso"
        android:id="@+id/continuar"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/novo_jogo"
        android:textColor="@color/amarelo"
        android:textStyle="bold"
        android:textSize="30sp"
        android:padding="20dp"
        android:layout_margin="10dp"
        android:shadowRadius="100"
        android:shadowColor="@color/aviso"
        android:id="@+id/novo_jogo"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/configuracoes"
        android:textColor="@color/amarelo"
        android:textStyle="bold"
        android:textSize="30sp"
        android:padding="20dp"
        android:layout_margin="10dp"
        android:shadowRadius="100"
        android:shadowColor="@color/aviso"
        android:id="@+id/configuracoes"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/sair"
        android:textColor="@color/amarelo"
        android:textStyle="bold"
        android:textSize="30sp"
        android:padding="20dp"
        android:layout_margin="10dp"
        android:shadowRadius="100"
        android:shadowColor="@color/aviso"
        android:id="@+id/sair"
        />

</LinearLayout>
</layout>