<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/padrao"
    >
    <ImageView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:background="@drawable/logo"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Selecione a dificuldade de jogo"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginTop="50dp"
        android:textSize="25sp"
        android:textColor="@color/branco"
        android:textStyle="bold"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginTop="30dp"

        >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Fácil"
            android:textSize="20sp"
            android:padding="10dp"
            android:textColor="@color/branco"
            android:buttonTint="@color/branco"
            android:textStyle="bold"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Normal"
            android:textSize="20sp"
            android:padding="10dp"
            android:textColor="@color/branco"
            android:buttonTint="@color/branco"
            android:textStyle="bold"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Difícil"
            android:textSize="20sp"
            android:padding="10dp"
            android:textColor="@color/branco"
            android:buttonTint="@color/branco"
            android:textStyle="bold"
            />
    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmar"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="30dp"
        android:background="@color/confirma"
        android:textColor="@color/branco"
        android:textStyle="bold"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="120dp"
        android:layout_marginTop="30dp"
        android:text="Cancelar"
        android:background="@color/cancela"
        android:textColor="@color/branco"
        android:textStyle="bold"

        />

</LinearLayout>
</layout>